<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".ui.account.AccountsFragment">

    <TextView
        android:id="@+id/tv_iv_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_image_profile"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/_24sdp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/iv_user"
        app:layout_constraintEnd_toEndOf="@+id/iv_user"
        app:layout_constraintStart_toStartOf="@+id/iv_user"
        app:layout_constraintTop_toTopOf="@+id/iv_user" />


    <ImageView
        android:id="@+id/iv_user"
        android:layout_width="@dimen/dimen_64"
        android:layout_height="@dimen/dimen_64"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/iv_account_user_icon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tv_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/tv_username"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/iv_user"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/tv_phone"
        app:layout_constraintEnd_toEndOf="@+id/tv_username"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/iv_user"
        app:layout_constraintTop_toBottomOf="@+id/tv_username" />

    <TextView
        android:id="@+id/tv_email"
        android:layout_width="57dp"
        android:layout_height="22dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/tv_email"
        app:layout_constraintEnd_toEndOf="@+id/tv_phone"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/iv_user"
        app:layout_constraintTop_toBottomOf="@+id/tv_phone" />

    <ImageView
        android:id="@+id/iv_edit"
        android:layout_width="@dimen/dimen_32"
        android:layout_height="@dimen/dimen_32"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/tv_edit_profile"
        android:src="@drawable/ic_edit"
        app:layout_constraintBottom_toBottomOf="@+id/tv_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/tv_phone"
        app:layout_constraintTop_toTopOf="@+id/tv_username"
        app:layout_constraintVertical_bias="0.576" />

    <Button
        android:id="@+id/btn_logout"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:text="@string/tv_logout"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="@+id/iv_edit"
        app:layout_constraintStart_toStartOf="@+id/iv_user"
        app:layout_constraintTop_toBottomOf="@+id/tv_email" />
</androidx.constraintlayout.widget.ConstraintLayout>