<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.auth.LoginActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        app:endIconMode="clear_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.024">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@color/white"
            android:hint="@string/tv_email"
            android:inputType="textEmailAddress"
            android:paddingStart="0dp"
            android:paddingEnd="0dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/til_email"
        app:layout_constraintVertical_bias="0.003"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@color/white"
            android:hint="@string/tv_password"
            android:inputType="textPassword"
            android:paddingStart="0dp"
            android:paddingEnd="0dp"
            tools:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tv_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_welcome"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_forgot_pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/tv_forgot_pass"
        android:textColor="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/til_password"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/til_password"
        app:layout_constraintTop_toBottomOf="@+id/til_password"
        app:layout_constraintVertical_bias="0.066" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_login"
        android:layout_width="0dp"
        android:layout_height="48sp"
        android:layout_marginTop="16dp"
        android:text="@string/tv_login"
        android:textAllCaps="false"
        android:textSize="13sp"
        app:layout_constraintEnd_toEndOf="@+id/tv_forgot_pass"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="@+id/til_password"
        app:layout_constraintTop_toBottomOf="@+id/tv_forgot_pass" />

    <View
        android:id="@+id/view1"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginEnd="32dp"
        android:background="@color/colorGray_500"
        app:layout_constraintBottom_toTopOf="@+id/materialButton2"
        app:layout_constraintEnd_toStartOf="@+id/tv_other_method"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="@id/tv_other_method"
        app:layout_constraintStart_toStartOf="@+id/btn_login"
        app:layout_constraintTop_toBottomOf="@+id/btn_login"
        app:layout_constraintVertical_bias="0.49" />

    <TextView
        android:id="@+id/tv_other_method"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_or_other_method"
        app:layout_constraintBottom_toTopOf="@+id/materialButton2"
        app:layout_constraintEnd_toEndOf="@+id/btn_login"
        app:layout_constraintStart_toStartOf="@+id/btn_login"
        app:layout_constraintTop_toBottomOf="@+id/btn_login" />

    <View
        android:id="@+id/view2"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginStart="32dp"
        android:background="@color/colorGray_500"
        app:layout_constraintBottom_toBottomOf="@+id/view1"
        app:layout_constraintEnd_toEndOf="@+id/btn_login"
        app:layout_constraintRight_toRightOf="@id/tv_other_method"
        app:layout_constraintStart_toEndOf="@+id/tv_other_method"
        app:layout_constraintTop_toTopOf="@+id/view1" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/materialButton2"
        style="@style/Button.OutlineBox"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:text="@string/tv_other_method_login"
        android:textAllCaps="false"
        android:textSize="13sp"
        app:icon="@drawable/ic_google"
        app:iconSize="20dp"
        app:iconTint="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/btn_login"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/btn_login"
        app:layout_constraintTop_toBottomOf="@+id/btn_login"
        app:layout_constraintVertical_bias="0.103" />

    <TextView
        android:id="@+id/textView_condition"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="68dp"
        android:text="@string/tv_register"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/textView_not_have_account"
        app:layout_constraintEnd_toEndOf="@+id/materialButton2"
        app:layout_constraintStart_toEndOf="@+id/textView_not_have_account"
        app:layout_constraintTop_toTopOf="@+id/textView_not_have_account"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView_not_have_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/tv_not_have_account"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/materialButton2"
        app:layout_constraintHorizontal_bias="0.338"
        app:layout_constraintStart_toStartOf="@+id/materialButton2"
        app:layout_constraintTop_toBottomOf="@+id/materialButton2"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tv_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_login"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.55"
        tools:visibility="invisible" />

    <TextView
        android:id="@+id/tv_logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_logout"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/tv_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_login"
        tools:visibility="invisible" />

    <Button
        android:id="@+id/btn_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_status"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_login" />

    <ProgressBar
        android:id="@+id/pb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>